Post on the great suspender; Edit alt text on previous post

--- a/_posts/2017-01-13-3D Printing.md
+++ b/_posts/2017-01-13-3D Printing.md
@@ -7,7 +7,7 @@ categories: ["3D", "printing", "FormLabs", "FormLabs Form 1+", "Tinkerine", "Dit
 
 I recently began fiddling around with 3D printing. In hind site, I should've started about a year ago because I had access to a 3D printer. Unfortunately, life happened and I never got around to it. Until now. :)
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/13Large.gif "End result of 3D print")
+![Animated image of Tinkerine DittoPro printing](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/13Large.gif "Animated image of Tinkerine DittoPro printing")
 
 The 3D printing machines that I have access to are the `FormLabs Form 1+` and the `Tinkerine DittoPro`.
 
@@ -27,39 +27,41 @@ I personally found the Tinkerine DittoPro to be very intuitive to use because th
 
 **Step 1: Create vector (ex Sketch)**
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/1.png "End result of 3D print")
+![Example of Sketch being used for vector drawing](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/1.png "Example of Sketch being used for vector drawing")
 
 Step 2: Save vector as an .esp file
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/2.png "End result of 3D print")
+![Example of exporting vectors as an .esp file](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/2.png "Example of exporting vectors as an .esp file")
 
 Step 3: Open 3D software (ex Rhino 5) and import your .esp file
 
 Step 4: Convert your imported vector into a layer and then extrude, bool diff, and/or union
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/3.png "End result of 3D print")
+![Example of using Rhino 5 to transform vectors into surfaces](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/3.png "Example of using Rhino 5 to transform vectors into surfaces")
 
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/4.png "End result of 3D print")
+![Example of using Rhino 5 to extrude surfaces](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/4.png "Example of using Rhino 5 to extrude surfaces")
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/6.png "End result of 3D print")
+![Example of using Rhino 5 to preform a boolean diff](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/7.png "Example of using Rhino 5 to preform a boolean diff")
+
+![Example of using Rhino 5 to preform a boolean diff](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/6.png "Example of using Rhino 5 to preform a boolean diff")
 
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/7.png "End result of 3D print")
+![Example of using Rhino 5 to preform a boolean diff](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/7.png "Example of using Rhino 5 to preform a boolean diff")
 
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/8.gif "End result of 3D print")
+![Example of using Rhino 5 to preform a boolean diff](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/8.gif "Example of using Rhino 5 to preform a boolean diff")
 
 Step 5: Select your object and export as .stl
 
 Step 6: Import your .stl file in 3D printing program (ex Tinkerine DittoPro or FormLabs PreForm)
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/10.png "End result of 3D print")
+![Tinkerine DittoPro printing software](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/10.png "Tinkerine DittoPro printing software")
 
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/11.png "End result of 3D print")
+![FormLabs PreForm printing software](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/11.png "FormLabs PreForm printing software")
 
 Step 7: Either print via the FormLabs Form 1+ (connect with usb) or save your project as a `.g` file and put it on an SD card that can be plugged into the Tinkerine DittoPro
 
 
-![End result of 3D print](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/13Large.gif "End result of 3D print")
+![Animated image of Tinkerine DittoPro printing](https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/2017-01-13-assets/13Large.gif "Animated image of Tinkerine DittoPro printing")
