docs(tags): Add tags to each post

--- a/_posts/2017-01-13-3D Printing.md
+++ b/_posts/2017-01-13-3D Printing.md
@@ -3,6 +3,7 @@ layout: post
 title:  3D Printing
 date:   2017-01-13 8:22:15 -0700
 categories: ["3D", "printing", "FormLabs", "FormLabs Form 1+", "Tinkerine", "DittoPro"]
+tags: design
 ---
 
 I recently began fiddling around with 3D printing. In hind site, I should've started about a year ago because I had access to a 3D printer. Unfortunately, life happened and I never got around to it. Until now. :)
